[package]
categories = ["development-tools::debugging"]
description = "Toolset for diagnosing Risingwave clusters."
edition = "2021"
keywords = ["async", "backtrace", "risingwave", "diagnose"]
license = "Apache-2.0"
name = "rw-diagnose-tools"
repository = "https://github.com/risingwavelabs/rw-diagnose-tools"
version = "0.1.2"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
itertools = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

wasm-bindgen = { version = "0.2", optional = true }
# For better panic messages in the browser console
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
cfg-if = "1.0.0"
web-sys = { version = "0.3", features = ["console"] , optional = true}

[dev-dependencies]
await-tree = { version = "0.3.0-alpha.3", features = ["serde"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "parse_text"

[[example]]
name = "parse_json"

[features]
default = []
wasm = ["console_error_panic_hook", "wee_alloc", "wasm-bindgen", "web-sys"]
